<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.lbl</groupId>
    <artifactId>springboot2demo</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <spring.boot.version>2.1.1.RELEASE</spring.boot.version>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <lombok.version>1.18.4</lombok.version>
        <testng.version>6.8.7</testng.version>
    </properties>

    <modules>
        <module>springboot-helloworld</module>

        <module>springboot-jpa</module>
        <module>springboot-mybatis</module>
        <module>springboot-mybatis-2ds-waring</module>
        <module>springboot-mybatis-2ds-ok</module>

        <module>springboot-kafka</module>
        <module>springboot-flink-kafka</module>

        <module>springboot-redis</module>
        <module>springboot-redis-multiple</module>

        <module>springboot-dubbo-api</module>
        <module>springboot-dubbo-service</module>
        <module>springboot-dubbo-consumer</module>

        <module>springboot-mongodb</module>

        <module>springboot-freemarker</module>

        <module>springboot-webflux-mongodb</module>
        <module>springboot-webflux-redis</module>


        <module>reactor3-helloworld</module>

        <module>jdk-source-code-analysis</module>
        <module>leecode-algorithm</module>


        <module>springboot-hbase</module>
        <module>springboot-hbase-215</module>

    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>fastjson</artifactId>
                <version>1.2.58</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>